Fix `Title` component overlapping header boundary

--- a/components/Title.module.scss
+++ b/components/Title.module.scss
@@ -2,7 +2,7 @@
 
 .title {
   position: absolute;
-  top: -100%;
+  top: -0.75rem;
   left: 50%;
   transform: translateX(-50%);
 
@@ -24,14 +24,14 @@
 }
 
 .title-main {
-  font-size: 8rem;
+  font-size: 6rem;
   font-weight: 300;
   letter-spacing: -1em;
 }
 
 .title-secondary {
-  padding-left: 6rem;
-  font-size: 4rem;
+  padding-left: 4.25rem;
+  font-size: 3rem;
   font-weight: 100;
 }
 
